--- a/AyusoConMorty/Localizable/en.lproj/Localizable.strings
+++ b/AyusoConMorty/Localizable/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* 
   Localizable.strings
-  Ayuso&Morty
+  AyusoConMorty
 
   Created by Alberto Ayuso Boza on 3/4/25.
   
@@ -14,3 +14,9 @@
 
 //TextfieldSearch
 "TextfieldSearch_placeHolder" = "Insert character name";
+
+//CharacterSheet
+"CharacterSheet_level1" = "Status";
+"CharacterSheet_level2" = "Species";
+"CharacterSheet_level3" = "Gender";
+"CharacterSheet_level4" = "Location";
